# solo_pong

./: pyproject.toml  solo_pong.py
