[tool.poetry]
name = "solo_pong"
version = "0.1.0"
description = ""
authors = ["noah"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
